--- a/core/templates/core/navbar.html
+++ b/core/templates/core/navbar.html
@@ -25,7 +25,7 @@
             <a class="nav-link" href="#">Log-in</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="#">Sign-up</a>
+            <a class="nav-link" href="{% url 'signup-page' %}">Sign-up</a>  <!--Hyperlink tag-->
         </li>
 
         <li class="nav-item dropdown">
