--- a/core/templates/core/navbar.html
+++ b/core/templates/core/navbar.html
@@ -35,6 +35,7 @@
         <ul class="dropdown-menu">
             <li><a class="dropdown-item" href="#">Action</a></li>
             <li><a class="dropdown-item" href="#">Another action</a></li>
+            <li><a class="dropdown-item" href="{% url 'logout-page' %}">logout</a></li>
 
         </ul>
         </li>
