Include change passwored

--- a/core/templates/core/navbar.html
+++ b/core/templates/core/navbar.html
@@ -30,11 +30,11 @@
 
         <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Dropdown
+            {{request.user.username|capfirst}}
         </a>
         <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="#">Action</a></li>
-            <li><a class="dropdown-item" href="#">Another action</a></li>
+            <li><a class="dropdown-item" href="{% url 'dashboard-page' %}">Dashboard</a></li>
+            <li><a class="dropdown-item" href="{% url 'change-password-page' %}">Change Password</a></li>
             <li><a class="dropdown-item" href="{% url 'logout-page' %}">logout</a></li>
 
         </ul>
